# sistemas-2

./: .status.md  ARCHITECTURE.md  CONTEXT.md  README.md  REQUIREMENTS.md  REVIEW_REPORT.md  TEST_REPORT.md  generate_report_assets.sh  start_tarea2.sh  trabajo_tenam.aux  trabajo_tenam.fdb_latexmk  trabajo_tenam.fls  trabajo_tenam.out  trabajo_tenam.tex
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  test_urdf.sh
ros_ws/: capture_topics.py  frames.gv  generate_all_videos.sh  generate_assets.py  record_tarea1.sh  record_tarea2.sh  record_tarea3.sh  record_topic_data.sh  render_map_video.py  render_nav_video.py  render_video.py  run_all.sh  run_sim.sh  start_sim.sh
ros_ws/devel/lib/pkgconfig/: robot_description.pc  robot_gazebo.pc  robot_localization.pc  robot_navigation.pc  robot_slam.pc
ros_ws/maps/: warehouse_map.pgm  warehouse_map.yaml
ros_ws/src/robot_description/: CMakeLists.txt
ros_ws/src/robot_description/config/: robot.rviz
ros_ws/src/robot_description/launch/: display.launch
ros_ws/src/robot_gazebo/: CMakeLists.txt  package.xml
ros_ws/src/robot_gazebo/config/: amcl.rviz  robot_control.yaml
ros_ws/src/robot_gazebo/launch/: spawn_robot.launch  warehouse.world
ros_ws/src/robot_gazebo/models/: laser_model.sdf  robot.sdf  robot_nolaser.sdf
ros_ws/src/robot_gazebo/scripts/: save_map.py
ros_ws/src/robot_localization/: CMakeLists.txt
ros_ws/src/robot_navigation/: CMakeLists.txt
ros_ws/src/robot_slam/: CMakeLists.txt  package.xml
ros_ws/src/robot_slam/config/: gmapping_params.yaml
ros_ws/src/robot_slam/launch/: gmapping.launch
(+15 files in other folders)
