<?xml version="1.0"?>
<package format="2">
  <name>robot_gazebo</name>
  <version>1.0.0</version>
  <description>Configuración Gazebo para simulación de navegación autónoma</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>robot_description</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
</package>
