<?xml version="1.0"?>
<package format="2">
  <name>robot_slam</name>
  <version>1.0.0</version>
  <description>Configuración Gmapping SLAM para Tarea 1 de navegación autónoma</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>gmapping</depend>
  <depend>map_server</depend>
</package>
